--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "make_messages"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+xlsx2csv = "^0.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
