--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ xlsx2csv = "^0.8.0"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 pytest = "^7.2.0"
+pytest-coverage = "^0.0"
 
 [build-system]
 requires = ["poetry-core"]
